--- a/Regression.ipynb
+++ b/Regression.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Apple Regression Analysis\n",
     "\n",
-    "**This analysis was completed as part of my Intermediate Financial Management (FIN 425) course project at Washington State University.**\n",
+    "**This project was inspired by a Intermediate Financial Management (FIN 425) course project at Washington State University.**\n",
     "\n",
     "## Purpose\n",
     "\n",
